@@ -1,8 +1,28 @@
-# spiro
-## A simple and efficient MP3 player built using Java
+## Spiro
+A simple and efficient MP3 player built using Java
+
 ![](https://github.com/finitesphere/spiro/blob/main/example.gif)
 
-# TO DO
+### Requirements:
+Make sure you have the following installed:
+- **Java Development Kit (JDK)**: https://www.oracle.com/java/technologies/downloads/
+- **JavaFX SDK**: https://openjfx.io/
+
+### Instructions:
+1. Clone the repository
+```
+git clone https://github.com/finitesphere/spiro
+```
+3. Navigate to the project directory
+```
+cd spiro
+```
+5. Compile and run the `SpiroPlayer.jar` using a terminal (change javafx lib path to your javafx lib path)
+```
+java --module-path "C:\your\path\javafx-sdk\lib" --add-modules javafx.controls,javafx.graphics,javafx.fxml,javafx.media -jar SpiroPlayer.jar
+```
+
+### TO DO:
 - [X] Upload Java code with CSS
 - [X] Upload JAR file
 - [ ] Create an executable of the jar file
